@startuml
'https://plantuml.com/class-diagram

title "适配器模式 Adapter Pattern"
' 适配器的角色：
' 目标（Target)接口：当前系统业务所期望的接口，它可以是抽象类或接口
' 适配者（Adaptee)类：它是被访问和适配的现在组件库中的组件接口
' 适配器（Adapter)类：它是一个转换器，通过继承或引用适配者对象，把适配者拉口转换成目标接口，让客户按目标客户的接口的格式访问适配者


class Computer{
    + String readSD(SDCard sdCard)
}

interface SDCard{
    + String readSD()
    + void writeSD()

}

class SDCardImpl{
    + String readSD()
    + void writeSD()
}

interface TFCard{
    + String readTF()
    + void writeTF()
}

class TFCardImpl{
    + String readTF()
    + void writeTF()
}

class SDAdapterTF{
    + String readSD()
    + void writeSD()
}

TFCard <|.. TFCardImpl
SDCard <|.. SDAdapterTF
TFCardImpl <|-- SDAdapterTF

SDCard <|.. SDCardImpl
Computer ..> SDCard


@enduml